mod界面上添加开关按钮喝标签

--- a/src/main/resources/assets/chainveinfabric/lang/en_us.json
+++ b/src/main/resources/assets/chainveinfabric/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "key.chainveinfabric.config": "Open Config",
-  "key.category.chainveinfabric.general": "Chain Vein Fabric"
+  "key.category.chainveinfabric.general": "Chain Vein Fabric",
+  "options.chainveinfabric.chainVein": "Chain Mining"
 }
