添加标签页，以及连锁数量、进背包配置

--- a/src/main/resources/assets/chainveinfabric/lang/zh_cn.json
+++ b/src/main/resources/assets/chainveinfabric/lang/zh_cn.json
@@ -7,6 +7,10 @@
   "options.chainveinfabric.remove": "移除",
   "options.chainveinfabric.allBlocks": "所有方块",
   "options.chainveinfabric.whitelist": "白名单",
+  "options.chainveinfabric.tab.whitelist": "白名单管理",
+  "options.chainveinfabric.tab.settings": "通用设置",
+  "options.chainveinfabric.maxBlocks": "连锁采集上限",
+  "options.chainveinfabric.directToInventory": "直接进入背包",
   "narrator.entry.block": "方块: %s",
   "narration.list.usage": "方块列表",
   "narration.whitelist.usage": "白名单方块",
