--- a/src/main/resources/assets/chainveinfabric/lang/en_us.json
+++ b/src/main/resources/assets/chainveinfabric/lang/en_us.json
@@ -7,6 +7,10 @@
   "options.chainveinfabric.remove": "Remove",
   "options.chainveinfabric.allBlocks": "Available Blocks",
   "options.chainveinfabric.whitelist": "Whitelist",
+  "options.chainveinfabric.tab.whitelist": "Whitelist Management",
+  "options.chainveinfabric.tab.settings": "General Settings",
+  "options.chainveinfabric.maxBlocks": "Max Chain Blocks",
+  "options.chainveinfabric.directToInventory": "Direct to Inventory",
   "narrator.entry.block": "Block: %s",
   "narration.list.usage": "Block list",
   "narration.whitelist.usage": "Whitelisted blocks",
