--- a/src/main/resources/assets/chainveinfabric/lang/en_us.json
+++ b/src/main/resources/assets/chainveinfabric/lang/en_us.json
@@ -11,6 +11,7 @@
   "options.chainveinfabric.tab.settings": "General Settings",
   "options.chainveinfabric.maxBlocks": "Max Chain Blocks",
   "options.chainveinfabric.directToInventory": "Direct to Inventory",
+  "options.chainveinfabric.toolProtection": "Tool Protection (Durability > 10)",
   "narrator.entry.block": "Block: %s",
   "narration.list.usage": "Block list",
   "narration.whitelist.usage": "Whitelisted blocks",
