--- a/src/main/resources/assets/chainveinfabric/lang/zh_cn.json
+++ b/src/main/resources/assets/chainveinfabric/lang/zh_cn.json
@@ -11,6 +11,7 @@
   "options.chainveinfabric.tab.settings": "通用设置",
   "options.chainveinfabric.maxBlocks": "连锁采集上限",
   "options.chainveinfabric.directToInventory": "直接进入背包",
+  "options.chainveinfabric.toolProtection": "工具保护 (耐久 > 10)",
   "narrator.entry.block": "方块: %s",
   "narration.list.usage": "方块列表",
   "narration.whitelist.usage": "白名单方块",
