添加斜角和斜边连锁开关

--- a/src/main/resources/assets/chainveinfabric/lang/en_us.json
+++ b/src/main/resources/assets/chainveinfabric/lang/en_us.json
@@ -12,6 +12,8 @@
   "options.chainveinfabric.maxBlocks": "Max Chain Blocks",
   "options.chainveinfabric.directToInventory": "Direct to Inventory",
   "options.chainveinfabric.toolProtection": "Tool Protection (Durability > 10)",
+  "options.chainveinfabric.diagonalEdge": "Diagonal (Edge)",
+  "options.chainveinfabric.diagonalCorner": "Diagonal (Corner)",
   "narrator.entry.block": "Block: %s",
   "narration.list.usage": "Block list",
   "narration.whitelist.usage": "Whitelisted blocks",
